Add Geography map with community location AEDG-346, add sizing for sm,md,lg,xl maps

--- a/app/views/communities/sections/_background.html.haml
+++ b/app/views/communities/sections/_background.html.haml
@@ -1,10 +1,12 @@
 - if @community.name
+  .mb-3
+    = render 'communities/sections/background/geography'
+
+- if @community.name
   .mb-3 
     = render 'communities/sections/background/election_districts'
 
 .row.g-5.align-items-start
-  - if @community.name
-    .col= render 'communities/sections/background/geography', community: @community
   - if @community.transportation
     .col= render 'communities/sections/background/transportation', transportation: @community.transportation
   - if @community.population
