--- a/app/views/communities/sections/background/_election_districts.html.haml
+++ b/app/views/communities/sections/background/_election_districts.html.haml
@@ -40,9 +40,7 @@
       } Senate Districts
       %span{ data: { maps_target: "loading" }}
 
-    #districtsMap.rounded{ data: { maps_target: "map" }, style: "width: 100%; height: 500px;" }
-
-
+    .map-md.rounded{ data: { maps_target: "map" }}
 
   #districtData.tab-pane.fade
     = render "communities/sections/background/election_districts/district_data"
