--- a/app/views/communities/sections/background/_election_districts.html.haml
+++ b/app/views/communities/sections/background/_election_districts.html.haml
@@ -1,4 +1,4 @@
-%h4 Election Districts
+%h4.mb-3 Election Districts
 
 = render "communities/sections/background/election_districts/district_overview"
 
