--- a/app/views/communities/sections/background/_transportation.html.haml
+++ b/app/views/communities/sections/background/_transportation.html.haml
@@ -1,8 +1,7 @@
-%h4 Transportation
-.mb-3
-  %small.text-muted
-    %strong Last Updated:
-    = transportation.as_of_date
+%h4.mb-3 Transportation
+%small.text-muted
+  %strong Last Updated:
+  = transportation.as_of_date
 
 .container-fluid.bg-body-secondary.rounded.p-3.mb-3
   .row.g-3
