--- a/app/views/communities/sections/background/election_districts/_district_data.html.haml
+++ b/app/views/communities/sections/background/election_districts/_district_data.html.haml
@@ -1,15 +1,14 @@
-%div{ data: { controller: 'datatables' }}
-  %table.table.table-striped.border{ data: { datatables_target: 'table' } }
-    %thead
+%table.table.table-striped.border{ data: { controller: 'datatables' }}
+  %thead
+    %tr
+      %th House District
+      %th House District Name
+      %th Senate District
+      %th Election Region
+  %tbody
+    - @community.communities_legislative_districts.each do |districts|
       %tr
-        %th House District
-        %th House District Name
-        %th Senate District
-        %th Election Region
-    %tbody
-      - @community.communities_legislative_districts.each do |districts|
-        %tr
-          %td= districts.house_district&.district
-          %td= districts.house_district&.name
-          %td= districts.senate_district&.district
-          %td= districts.election_region
+        %td= districts.house_district&.district
+        %td= districts.house_district&.name
+        %td= districts.senate_district&.district
+        %td= districts.election_region
