--- a/app/views/communities/sections/electricity/_grid_capacity.html.haml
+++ b/app/views/communities/sections/electricity/_grid_capacity.html.haml
@@ -47,16 +47,15 @@
       = pie_chart capacity_yearly_community_charts_path(@community), title: chart_title, suffix: "MW", donut: true, download: { background: "#ffffff", filename: chart_title.parameterize, format: "png" }, library: { plugins: { legend: { title: { display: true, text: "Fuel Type"}, display: true, position: 'left' } } }
 
     #data.tab-pane.fade
-      %div{ data: { controller: 'datatables', datatables: { order_value: [1, 'desc'] } }}
-        %table.table.table-striped.border{ data: { datatables_target: 'table' } }
-          %thead
+      %table.table.table-striped.border{ data: { controller: 'datatables', datatables: { order_value: [1, 'desc']} } }
+        %thead
+          %tr
+            %th Fuel Type
+            %th Capacity (MW)
+            %th Year
+        %tbody
+          - @community.grid.capacities.where(year: stats[:year]).each do |capacity|
             %tr
-              %th Fuel Type
-              %th Capacity (MW)
-              %th Year
-          %tbody
-            - @community.grid.capacities.where(year: stats[:year]).each do |capacity|
-              %tr
-                %td= capacity.fuel_type
-                %td= capacity.capacity_mw
-                %td= capacity.year
+              %td= capacity.fuel_type
+              %td= capacity.capacity_mw
+              %td= capacity.year
