--- a/app/views/communities/sections/electricity/production/_yearly_data.html.haml
+++ b/app/views/communities/sections/electricity/production/_yearly_data.html.haml
@@ -1,13 +1,12 @@
-%div{ data: { controller: 'datatables', datatables: { order_value: [3, 'asc']} }}
-  %table.table.table-stripped.border{ data: { datatables_target: 'table'} }
-    %thead
+%table.table.table-stripped.border{ data: { controller: 'datatables', datatables: { order_value: [3, 'asc']} } }
+  %thead
+    %tr
+      %th Net Generation (MWh)
+      %th Fuel Type
+      %th Year
+  %tbody
+    - @community.grid.yearly_generations.each do |generation|
       %tr
-        %th Net Generation (MWh)
-        %th Fuel Type
-        %th Year
-    %tbody
-      - @community.grid.yearly_generations.each do |generation|
-        %tr
-          %td= generation.net_generation_mwh
-          %td= generation.fuel_type
-          %td= generation.year
+        %td= generation.net_generation_mwh
+        %td= generation.fuel_type
+        %td= generation.year
