Add grid method to community for current grid, update conditional checks on views displaying grid level visualizations

--- a/app/views/communities/sections/_electricity.html.haml
+++ b/app/views/communities/sections/_electricity.html.haml
@@ -7,13 +7,13 @@
     %li.nav-item
       = link_to "Rates", "#rates", class: 'nav-link'
 
-- if @community.grid
+- if @community.grid&.monthly_generations&.exists? || @community.grid&.yearly_generations&.exists?
   .mb-3
     = render 'communities/sections/electricity/production'
-- if @community.grid.capacities.any?
+- if @community.grid&.capacities&.exists?
   .mb-3
     = render 'communities/sections/electricity/grid_capacity'
-  
+
 .row.g-3.row-cols-2
   - if @community.name
     .col= render 'communities/sections/electricity/utility', community: @community
