--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,8 +9,8 @@
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_importmap_tags
     %link{rel: 'stylesheet', href: 'https://api.mapbox.com/mapbox-gl-js/v3.10.0/mapbox-gl.css' }
-  %body
+  %body.d-flex.flex-column.min-vh-100
     = render 'header'
-    .container-fluid
+    .container-fluid.flex-grow-1
       = yield
     = render 'footer'
