Add discover_more partial for home page

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,8 +1,10 @@
 .container.py-5.text-center
   = render 'home_hero'
-  %hr.mb-5
+  %hr
   = render 'whats_new'
-  %hr.mb-5
+  %hr
   = render 'explore_energy_sections'
+  %hr
+  = render 'discover_more'
 
   
