--- a/app/views/static_pages/user_guide.html.haml
+++ b/app/views/static_pages/user_guide.html.haml
@@ -1,2 +1,6 @@
 %h1 StaticPages#user_guide
 %p Find me in app/views/static_pages/user_guide.html.haml
+%section#data-creation-process
+  %h1 Data Creation Process
+%section#citing
+  %h1 Citing AEDG
