Add AEDG History Timeline to about page

--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -1,3 +1,9 @@
-%h1 StaticPages#about
-%p Find me in app/views/static_pages/about.html.haml
+.container.py-5
+  %h2.fw-bold About
+  %p.lead.text-muted
+    The Alaska Energy Data Gateway combines community, socio-economic, and energy data into data dashboards, tools, and new datasets to meet Alaska’s energy data needs.
+
+  %hr.my-5
+
+  = render 'history_timeline'
 %section#partners
