--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -340,3 +340,29 @@
   margin: 0 auto;
   /* Center images in their containers */
 }
+
+
+.timeline {
+  border-left: 1px solid hsl(0, 0%, 90%);
+  position: relative;
+  list-style: none;
+}
+
+.timeline .timeline-item {
+  position: relative;
+}
+
+.timeline .timeline-item:after {
+  position: absolute;
+  display: block;
+  top: 0;
+}
+
+.timeline .timeline-item:after {
+  background-color: $aedg-yellow;
+  left: -40px;
+  border-radius: 50%;
+  height: 14px;
+  width: 14px;
+  content: "";
+}
