--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -9,8 +9,10 @@
 
   %hr.my-5
   %section#partners.pt-5
-    %h5.text-muted.mb-3.mt-5.text-center Our Partners
-    %h3.fw-bold.text-center.mb-5 Working Together to Power Alaska
+    %h5.text-muted.mb-3.mt-5.text-center Our Partners & Contributors
+    %h3.fw-bold.text-center Working Together to Power Alaska
+    %p.lead.text-muted.text-center.mb-5
+      Many organizations have shaped the development and the data presented in the AEDG. Learn more about them here.
 
     - grouped_partners.each do |category, partners|
       %h4.mt-5.mb-4.text-muted= category.titleize
