Add Data Creation Sectin to User Guide

--- a/app/views/static_pages/user_guide.html.haml
+++ b/app/views/static_pages/user_guide.html.haml
@@ -6,8 +6,7 @@
   = render 'faq'
   %hr.mb-5
   = render 'navigating_aedg'
-
-  %section#data-creation-process
-  %h1 Data Creation Process
-%section#citing
-  %h1 Citing AEDG
+  %hr.mb-5
+  = render 'data_creation_process'
+  %hr.mb-5
+  = render 'citing'
