--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -1,14 +1,13 @@
 %header.main-header.mb-3
-  %nav.navbar.navbar-expand-lg
+  %nav.navbar.bg-aedg-navy.navbar-expand-lg.p-4
     .container-fluid
 
-      / Brand
       %a.navbar-brand{ href: root_path }
         %img{ src: asset_path('main_menu_logo.png'), alt: "Main Menu Logo", width: "125", class: "d-inline-block align-text-top" }
 
       / Menu Toggler
-      %button.navbar-toggler{ type: "button", data: { bs_toggle: "collapse", bs_target: "#navbarSupportedContent" }, aria: { controls: "navbarSupportedContent", expanded: "false", label: "Toggle navigation" } }
-        %span.navbar-toggler-icon
+      %button.navbar-dark.navbar-toggler{ type: "button", data: { bs_toggle: "collapse", bs_target: "#navbarSupportedContent" }, aria: { controls: "navbarSupportedContent", expanded: "false", label: "Toggle navigation" } }
+        %span.navbar-dark.navbar-toggler-icon
 
       / Main Menu
       #navbarSupportedContent.navbar-collapse.collapse
