--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -16,30 +16,15 @@
 
     - grouped_partners.each do |category, partners|
       %h4.mt-5.mb-4.text-muted= category.titleize
-      .list-group
-        - partners.each do |partner|
-          = link_to partner['url'], target: "_blank", class: "list-group-item list-group-item-action d-flex align-items-center py-3 px-4 gap-3 text-dark text-decoration-none" do
-            - if partner['logo']
-              = image_tag "partners/#{partner['logo']}", class: "rounded", alt: partner['name'], style: "width: 10rem; height: auto;"
-            - else
-              = image_tag "https://placehold.co/40", class: "rounded", alt: "Placeholder for #{partner['name']}", style: "width: 40px; height: auto;"
-
-            .flex-grow-1
-              %h6.mb-1.fw-semibold= partner['name']
-              - if partner['acronym']
-                %p.text-muted.small.mb-1= partner['acronym']
-
-    - grouped_partners.each do |category, partners|
-      %h4.mt-5.mb-4.text-muted= category.titleize
       .row
         - partners.each do |partner|
           .col-md-6.col-lg-4.mb-4
             = link_to partner['url'], target: "_blank", class: "d-block p-4 bg-white border rounded shadow-sm text-decoration-none text-dark h-100" do
               .d-flex.align-items-start.gap-3
                 - if partner['logo']
-                  = image_tag "partners/#{partner['logo']}", class: "rounded", alt: partner['name'], style: "width: 60px; height: auto;"
+                  = image_tag "partners/#{partner['logo']}", class: "rounded object-fit-contain img-fluid", alt: partner['name'], style: "height: 60px; width: auto;"
                 - else
-                  = image_tag "https://placehold.co/60", class: "rounded", alt: "Placeholder for #{partner['name']}", style: "width: 60px; height: auto;"
+                  = image_tag "https://placehold.co/75", class: "rounded", alt: "Placeholder for #{partner['name']}", style: "width: 60px; height: auto;"
 
                 .flex-grow-1
                   %h6.fw-semibold.mb-1= partner['name']
