--- a/app/views/static_pages/_discover_more.html.haml
+++ b/app/views/static_pages/_discover_more.html.haml
@@ -30,4 +30,4 @@
         %p.text-muted
           Learn how to properly reference AEDG data in your work.
         %p.mb-0
-          = link_to 'View →', user_guide_path(anchor:'citing'), class: 'text-decoration-none ms-1'
+          = link_to 'View →', user_guide_path(anchor:'cite_aedg'), class: 'text-decoration-none ms-1'
