--- a/app/views/static_pages/user_guide.html.haml
+++ b/app/views/static_pages/user_guide.html.haml
@@ -3,10 +3,10 @@
   %p.lead.text-muted
     Find energy and socioeconomic data for communities across the state of Alaska in the revitalized Alaska Energy Data Gateway
   %hr.mb-5
-  = render 'faq'
-  %hr.mb-5
   = render 'navigating_aedg'
+  %hr.mb-5
+  = render 'faq'
   %hr.mb-5
   = render 'data_creation_process'
   %hr.mb-5
-  = render 'citing'
+  = render 'citing_aedg'
