Clean up ui/spacing/wording/partial names

--- a/app/views/static_pages/_citing_aedg.html.haml
+++ b/app/views/static_pages/_citing_aedg.html.haml
@@ -1,6 +1,6 @@
-.container.py-5#cite_aedg
-  %h2.fw-bold.mb-3 How to Cite AEDG
-
+%section#cite_aedg.py-5
+  %h5.text-muted.mb-3 Citation
+  %h2.fw-bold.mb-4 How to Cite AEDG
   %p.text-muted
     Use the reference below to cite the Alaska Energy Data Gateway (AEDG) as a whole.
 
