--- a/app/views/static_pages/_discover_more.html.haml
+++ b/app/views/static_pages/_discover_more.html.haml
@@ -1,4 +1,4 @@
-.container.py-5
+%section#discover-more.py-5
   %h2.fw-bold.text-center.mb-5 Discover More About the Alaska Energy Data Gateway
 
   .row.text-start.justify-content-center
