--- a/app/views/static_pages/_explore_tools.html.haml
+++ b/app/views/static_pages/_explore_tools.html.haml
@@ -1,4 +1,4 @@
-.container.py-5
+%section#explore-tools.py-5
   .row.align-items-center.mb-5
     .col-lg-6.mb-4.text-start
       .mb-3
@@ -11,8 +11,8 @@
 
     .col-lg-6
       = image_tag "https://placehold.co/600x300", class: "img-fluid rounded"
-  .row.align-items-center.mb-5
-    .col-lg-6.mb-4
+  .row.align-items-center
+    .col-lg-6
       = image_tag "https://placehold.co/600x300", class: "img-fluid rounded"
 
     .col-lg-6.text-start
