--- a/app/views/static_pages/_faq.html.haml
+++ b/app/views/static_pages/_faq.html.haml
@@ -1,6 +1,6 @@
 %section#faq.py-5
-  %p.text-uppercase.text-muted Need Help?
-  %h1.fw-bold.fs-2.mb-5 Frequently Asked Questions
+  %h5.text-muted.mb-3 FAQ
+  %h2.fw-bold.mb-4 Frequently Asked Questions
 
   .d-flex.flex-column.flex-sm-row.flex-nowrap.gap-5.align-items-start
     %ul.nav.flex-row.flex-sm-column.nav-pills.gap-3{ id: "faq-tab", role: "tablist", 'aria-orientation': "vertical" }
