--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -3,7 +3,7 @@
   %hr
   = render 'whats_new'
   %hr
-  = render 'explore_energy_sections'
+  = render 'explore_tools'
   %hr
   = render 'discover_more'
 
