--- a/app/views/static_pages/user_guide.html.haml
+++ b/app/views/static_pages/user_guide.html.haml
@@ -1,12 +1,12 @@
 .container.py-5
   %h2.fw-bold User Guide
-  %p.lead.text-muted
+  %p.lead.text-muted.mb-4
     Find energy and socioeconomic data for communities across the state of Alaska in the revitalized Alaska Energy Data Gateway
-  %hr.mb-5
+  %hr
   = render 'navigating_aedg'
-  %hr.mb-5
+  %hr
   = render 'faq'
-  %hr.mb-5
+  %hr
   = render 'data_creation_process'
-  %hr.mb-5
+  %hr
   = render 'citing_aedg'
