--- a/app/views/static_pages/_whats_new.html.haml
+++ b/app/views/static_pages/_whats_new.html.haml
@@ -1,14 +1,14 @@
-.container.py-5
+%section#whats-new.py-5
   %h2.fw-bold.mb-4 What's new?
 
-  .row.justify-content-center.mb-5
+  .row.justify-content-center
     .col-lg-10
       %p.lead.text-muted
         The Alaska Energy Data Gateway (AEDG) provides essential energy and socioeconomic data tailored for Alaskan communities.
         Our revitalized platform offers user-friendly access to updated datasets and community dashboards.
         Explore how this data can empower your community today.
   .row.text-start.justify-content-center
-    .col-md-4.mb-4
+    .col-md-4
       .d-flex.flex-column.align-items-start
         %h5.fw-bold.d-flex.align-items-center.gap-2
           %i.bi.bi-rocket.fs-4
@@ -17,7 +17,7 @@
         %p.mb-0
           = link_to 'Tour →', user_guide_path, class: 'text-decoration-none ms-1'
 
-    .col-md-4.mb-4
+    .col-md-4
       .d-flex.flex-column.align-items-start
         %h5.fw-bold.d-flex.align-items-center.gap-2
           %i.bi.bi-bar-chart-line.fs-4
@@ -26,7 +26,7 @@
         %p.mb-0
           = link_to 'View →', metadata_path, class: 'text-decoration-none ms-1'
 
-    .col-md-4.mb-4
+    .col-md-4
       .d-flex.flex-column.align-items-start
         %h5.fw-bold.d-flex.align-items-center.gap-2
           %i.bi.bi-lightbulb.fs-4
