Add hero section, fix spacing through various pages, add database icons, icon interactions

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -75,6 +75,10 @@
   }
 }
 
+.hero-gradient {
+  background: linear-gradient(to bottom, #e0f0ff 0%, #fff7e6 50%, #ffffff 100%);
+}
+
 // Reusable button styles
 .btn-aedg-primary,
 .btn-primary {
