--- a/app/views/communities/index.html.haml
+++ b/app/views/communities/index.html.haml
@@ -1,5 +1,5 @@
-.text-center
-  .card
+.container.py-3.py-sm-5
+  .card.text-center
     .card-body.p-5
       %h1.fw-bold Community Summaries
       %p.lead.w-75.mx-auto
