--- a/app/views/static_pages/_citing_aedg.html.haml
+++ b/app/views/static_pages/_citing_aedg.html.haml
@@ -1,4 +1,4 @@
-%section#cite_aedg.py-5
+%section#cite-aedg.py-5
   %h5.text-muted.mb-3 Citation
   %h2.fw-bold.mb-4 How to Cite AEDG
   %p.text-muted
