--- a/app/views/static_pages/_home_hero.html.haml
+++ b/app/views/static_pages/_home_hero.html.haml
@@ -1,4 +1,4 @@
-%section#home-hero.py-5
+%section#home-hero.container.text-center.py-5
   = image_tag "aedg-logo.png", alt: "AEDG Logo", class: "img-fluid mb-4", style: "max-width: 300px;"
 
   %h2.mb-5.fw-bold Energy Data for Alaskan Communities
