--- a/app/views/metadata/tabs/_cite_dataset.html.haml
+++ b/app/views/metadata/tabs/_cite_dataset.html.haml
@@ -5,4 +5,7 @@
 
 %h6.fw-bold.mt-5 Need to cite the entire Alaska Energy Data Gateway?
 %p.text-muted
-  = link_to "See citation instructions →", user_guide_path(anchor: 'cite_aedg'), class: "text-decoration-none ms-1"
+  = link_to user_guide_path(anchor: 'cite-aedg'), class: 'text-decoration-none ms-1 icon-link icon-link-hover d-inline-flex align-items-baseline' do
+    %span See citation instructions
+    %i.bi.bi-arrow-right
+  
