--- a/app/views/static_pages/_discover_more.html.haml
+++ b/app/views/static_pages/_discover_more.html.haml
@@ -10,7 +10,9 @@
         %p.text-muted
           Understand the methodologies behind our comprehensive data collection.
         %p.mb-0
-          = link_to 'Learn →', user_guide_path(anchor:'data-creation-process'), class: 'text-decoration-none ms-1'
+          = link_to user_guide_path(anchor:'data-creation-process'), class: 'text-decoration-none fs-5 ms-1 icon-link icon-link-hover d-inline-flex align-items-baseline' do
+            %span Learn
+            %i.bi.bi-arrow-right
 
     .col-md-4.mb-4
       .d-flex.flex-column.align-items-start
@@ -20,7 +22,9 @@
         %p.text-muted
           Get to know the experts committed to improving energy data access.
         %p.mb-0
-          = link_to 'Meet →', about_path(anchor:'partners'), class: 'text-decoration-none ms-1'
+          = link_to user_guide_path(anchor:'partners'), class: 'text-decoration-none fs-5 ms-1 icon-link icon-link-hover d-inline-flex align-items-baseline' do
+            %span Meet
+            %i.bi.bi-arrow-right
 
     .col-md-4.mb-4
       .d-flex.flex-column.align-items-start
@@ -30,4 +34,6 @@
         %p.text-muted
           Learn how to properly reference AEDG data in your work.
         %p.mb-0
-          = link_to 'View →', user_guide_path(anchor:'cite_aedg'), class: 'text-decoration-none ms-1'
+          = link_to user_guide_path(anchor:'cite-aedg'), class: 'text-decoration-none fs-5 ms-1 icon-link icon-link-hover d-inline-flex align-items-baseline' do
+            %span View
+            %i.bi.bi-arrow-right
