--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,5 +1,7 @@
-.container.py-5.text-center
+.hero-gradient.pt-5
   = render 'home_hero'
+
+.container.py-5.text-center
   %hr
   = render 'whats_new'
   %hr
