--- a/app/views/static_pages/_home_hero.html.haml
+++ b/app/views/static_pages/_home_hero.html.haml
@@ -3,9 +3,9 @@
 
   %h2.mb-5.fw-bold Energy Data for Alaskan Communities
 
-  .row.justify-content-center
+  .row.justify-content-center.g-4
     .col-md-4.d-flex
-      = link_to user_guide_path, class: "p-4 bg-white shadow rounded h-100 w-100 text-decoration-none text-dark" do
+      = link_to user_guide_path, class: "p-4 bg-white shadow rounded h-100 w-100 text-decoration-none text-dark hover-shadow" do
         .mb-2
         %i.bi.bi-star-fill.fs-2
         %h5.fw-semibold New to AEDG?
@@ -13,7 +13,7 @@
         %p A guide to getting you started
 
     .col-md-4.d-flex
-      = link_to metadata_path, class: "p-4 bg-white shadow rounded h-100 w-100 text-decoration-none text-dark" do
+      = link_to metadata_path, class: "p-4 bg-white shadow rounded h-100 w-100 text-decoration-none text-dark hover-shadow" do
         .mb-2
           %i.bi.bi-database-fill.fs-2
         %h5.fw-semibold View & Download Datasets
@@ -21,7 +21,7 @@
         %p Dive into Alaskan energy data to uncover trends, inform decisions, and power your insights
 
     .col-md-4.d-flex
-      = link_to communities_path, class: "p-4 bg-white shadow rounded h-100 w-100 text-decoration-none text-dark" do
+      = link_to communities_path, class: "p-4 bg-white shadow rounded h-100 w-100 text-decoration-none text-dark hover-shadow" do
         .mb-2
           %i.bi.bi-house-fill.fs-2
         %h5.fw-semibold Explore Community Dashboards
