--- a/app/views/static_pages/_partners.html.haml
+++ b/app/views/static_pages/_partners.html.haml
@@ -8,15 +8,17 @@
     %h4.mt-5.mb-4.text-muted= category.titleize
     .row
       - partners.each do |partner|
-        .col-md-6.col-lg-4.mb-4
-          = link_to partner['url'], target: "_blank", class: "d-block p-4 bg-white border rounded shadow-sm text-decoration-none text-dark h-100" do
-            .d-flex.align-items-start.gap-3
-              - if partner['logo']
-                = image_tag "partners/#{partner['logo']}", class: "rounded object-fit-contain img-fluid", alt: partner['name'], style: "height: 60px; width: auto;"
-              - else
-                = image_tag "https://placehold.co/75", class: "rounded", alt: "Placeholder for #{partner['name']}", style: "width: 60px; height: auto;"
+        .col.col-sm-6.col-lg-3.mb-4
+          = link_to partner['url'], target: "_blank", class: "d-block p-4 bg-white border rounded shadow-sm text-decoration-none text-dark h-100 hover-shadow text-center" do
+            .d-flex.flex-column.align-items-center.justify-content-center.h-100
+              / Logo container with fixed size
+              .logo-wrapper.mb-3{ style: "width: 120px; height: 90px;" }
+                - if partner['logo']
+                  = image_tag "partners/#{partner['logo']}", class: "img-fluid object-fit-contain h-100", alt: partner['name']
+                - else
+                  = image_tag "https://placehold.co/100", class: "img-fluid object-fit-contain h-100", alt: "Placeholder for #{partner['name']}"
 
-              .flex-grow-1
-                %h6.fw-semibold.mb-1= partner['name']
-                - if partner['acronym']
-                  %p.text-muted.small.mb-1= partner['acronym']
+              / Name & acronym underneath
+              %h6.fw-semibold.mb-1.text-break= partner['name']
+              - if partner['acronym']
+                %p.text-muted.small.mb-0= partner['acronym']
