--- a/app/views/static_pages/_discover_more.html.haml
+++ b/app/views/static_pages/_discover_more.html.haml
@@ -1,39 +1,35 @@
 %section#discover-more.py-5
-  %h2.fw-bold.text-center.mb-5 Discover More About the Alaska Energy Data Gateway
+  %h2.fw-bold.mb-5 Discover More About the Alaska Energy Data Gateway
 
   .row.text-start.justify-content-center
-    .col-md-4.mb-4
+    .col-md-4
       .d-flex.flex-column.align-items-start
-        .mb-3
-          %i.bi.bi-graph-up-arrow.fs-2
-        %h5.fw-bold Get to know the Alaska Energy Data Gateway
-        %p.text-muted
-          Understand the methodologies behind our comprehensive data collection.
-        %p.mb-0
+        %h5.fw-bold.d-flex.align-items-center.gap-2
+          %i.bi.bi-graph-up-arrow.me-2
+          Get to know the Alaska Energy Data Gateway
+        %p.text-muted Understand the methodologies behind our comprehensive data collection.
+        %p.mb-5
           = link_to user_guide_path(anchor:'data-creation-process'), class: 'text-decoration-none fs-5 ms-1 icon-link icon-link-hover d-inline-flex align-items-baseline' do
             %span Learn
             %i.bi.bi-arrow-right
 
-    .col-md-4.mb-4
+    .col-md-4
       .d-flex.flex-column.align-items-start
-        .mb-3
-          %i.bi.bi-people-fill.fs-2
-        %h5.fw-bold Meet the Team Behind AEDG's Revitalization
-        %p.text-muted
-          Get to know the experts committed to improving energy data access.
-        %p.mb-0
+        %h5.fw-bold.d-flex.align-items-center.gap-2
+          %i.bi.bi-people-fill.me-2
+          Meet the Team Behind AEDG's Revitalization
+        %p.text-muted Get to know the experts committed to improving energy data access.
+        %p.mb-5
           = link_to user_guide_path(anchor:'partners'), class: 'text-decoration-none fs-5 ms-1 icon-link icon-link-hover d-inline-flex align-items-baseline' do
             %span Meet
             %i.bi.bi-arrow-right
-
-    .col-md-4.mb-4
+    .col-md-4
       .d-flex.flex-column.align-items-start
-        .mb-3
-          %i.bi.bi-file-earmark-text.fs-2
-        %h5.fw-bold Citing AEDG Data: Guidelines and Best Practices
-        %p.text-muted
-          Learn how to properly reference AEDG data in your work.
-        %p.mb-0
+        %h5.fw-bold.d-flex.align-items-center.gap-2
+          %i.bi.bi-lightbulb.me-2
+          Citing AEDG Data: Guidelines and Best Practices
+        %p.text-muted Learn how to properly reference AEDG data in your work.
+        %p.mb-5
           = link_to user_guide_path(anchor:'cite-aedg'), class: 'text-decoration-none fs-5 ms-1 icon-link icon-link-hover d-inline-flex align-items-baseline' do
-            %span View
+            %span Explore
             %i.bi.bi-arrow-right
