--- a/app/views/static_pages/_home_hero.html.haml
+++ b/app/views/static_pages/_home_hero.html.haml
@@ -1,5 +1,5 @@
 %section#home-hero.container.text-center.py-5
-  = image_tag "aedg-logo.png", alt: "AEDG Logo", class: "img-fluid mb-4", style: "max-width: 300px;"
+  = image_tag "aedg-logo.png", alt: "AEDG Logo", class: "img-fluid mb-5 w-50"
 
   %h2.mb-5.fw-bold Energy Data for Alaskan Communities
 
@@ -10,7 +10,7 @@
         %i.bi.bi-star-fill.fs-2
         %h5.fw-semibold New to AEDG?
         %hr
-        %p A guide to getting you started
+        %p.text-muted A guide to getting you started
 
     .col-md-4.d-flex
       = link_to metadata_path, class: "p-4 bg-white shadow rounded h-100 w-100 text-decoration-none text-dark hover-shadow" do
@@ -18,7 +18,7 @@
           %i.bi.bi-database-fill.fs-2
         %h5.fw-semibold View & Download Datasets
         %hr
-        %p Dive into Alaskan energy data to uncover trends, inform decisions, and power your insights
+        %p.text-muted Dive into Alaskan energy data to uncover trends, inform decisions, and power your insights
 
     .col-md-4.d-flex
       = link_to communities_path, class: "p-4 bg-white shadow rounded h-100 w-100 text-decoration-none text-dark hover-shadow" do
@@ -26,4 +26,4 @@
           %i.bi.bi-house-fill.fs-2
         %h5.fw-semibold Explore Community Dashboards
         %hr
-        %p Gain insights into the energy systems that shape Alaska’s communities
+        %p.text-muted Gain insights into the energy systems that shape Alaska’s communities
