Enable and add negative margins for hero section, add mb to header, remove padding from containers

--- a/app/assets/stylesheets/variable-overrides.scss
+++ b/app/assets/stylesheets/variable-overrides.scss
@@ -1,8 +1,6 @@
 // Default variable overrides
-
+$enable-negative-margins: true;
 // scss-docs-start theme-color-variables
-$primary:       #0F1F4B;
-$secondary:     #ffb611;
 $success:       #198754;
 $info:          #0dcaf0;
 $warning:       #ffc107;
