--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -1,4 +1,4 @@
-.container.py-5
+.container
   %h2.fw-bold About
   %p.lead.text-muted.mb-4
     The Alaska Energy Data Gateway combines community, socio-economic, and energy data into data dashboards, tools, and new datasets to meet Alaska’s energy data needs.
